# Nexa_Compute

./: .env.example  .gitignore  .mintignore  .mintlifyignore  .pre-commit-config.yaml  CONTRIBUTING.md  Citaions.py  DOCUMENTATION_COMPLETE.md  FINAL_SUMMARY.md  Makefile  README.md  SETUP.md  Spec.md  Test.py  atlasplusplus_citations.json  docs.json  docs.json.backup  mint.json  orchestrate.py  pyproject.toml  requirements.in  requirements.txt  tmp_local_models.json  tmp_new_models.json  tmp_openrouter_regen.json
.cursor/: worktrees.json
.cursor/rules/: compute-platform.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml
Nexa_compute/: pyvenv.cfg
configs/acc/: fsdp_4gpu.yaml
docker/: Dockerfile  README.md  cuda_12.4.txt  docker-compose.yaml  infer.Dockerfile  train-heavy.Dockerfile
docker/entrypoints/: vllm_entry.sh
docker/forge/: Dockerfile.frontend
docs/: DATA_FORMAT.md  DISTILLATION_COST_ANALYSIS.md  EVAL_ISSUES_ANALYSIS.md  Evals.md  FALCON3_DISTILLATION_ROI.md  MAIN_README.md  Nexa_Forge.md  Nexa_forge.md  POSTMORTEM_20251031.md  QUICK_START.md  README.md  READY_TO_RUN.md  SECRET_CLEANUP_GUIDE.md  SETUP.md  START_HERE.md  STORAGE_POLICY.md  Spec.md  Spec_Nexa_2.md  doc.json  implementation_report.md  runbook.md  scan_report.md  worker_registration.md
docs/Overview_of_Project/: ARCHITECTURE_v1.md  COST_MODEL.md  DATA_ORGANIZATION.md  DISTILLATION.md  EVAL_FRAMEWORK.md  MODULE_STRUCTURE.md  Nexa_compute_roadmap.md  PIPELINE_V2.md  POLICY.md  QUICK_START.md  README.md  RUN_MANIFEST_SCHEMA.md  SAFETY_POLICY.md  STORAGE_POLICY.md  architecture.md  runbook.md
docs/Pipeline/: EXECUTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_GUIDE.md
docs/Run_Postmortems/: POSTMORTEM_20251031.md  inference_post_mortem.md
docs/Spec's/: Nexa_inference_spec.md  inference_features.md  inference_pipeline.md
docs/adr/: 001_tracing.md  002_data_versioning.md  003_workflow_orchestration.md
docs/api/: README.md
docs/compute_plans/: Compute_Strategy.md  Dataset_split.md  Model_card.md  README.md  msms_model_eval_spec.md  tiers.md
docs/conventions/: CONFIG_STANDARDS.md  DATA_ORGANIZATION.md  Language_Boundaries.md  NAMING_CONVENTIONS.md  POLICY.md  PROJECT_STRUCTURE.md  Scaling_Policy.md
docs/mintlify/: introduction.mdx  mint.json  quickstart.mdx
docs/operations/: RESILIENCE.md  RUNBOOK.md
docs/overview/: ARCHITECTURE.md  COMPUTE_ENGINE.md  PLATFORM.md  ROADMAP.md
docs/pipelines/: DATA.md  DISTILLATION.md  EVALUATION.md  INFERENCE.md  INFRASTRUCTURE.md  README.md  TOOLS.md  TRAINING.md  UI.md
docs/platform/: README.md
docs/projects/: README.md  scientific_assistant.md
docs/workflows/: README.md
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/components/: MetricsCard.tsx  Sidebar.tsx
frontend/lib/: api.ts
nexa_data/: README.md  augment.py  data_generation_job.py  distill_materialize.py  prepare.py
nexa_data/data_analysis/: README.md  (+2 more)
nexa_data/msms/rust_ext/: Cargo.toml  README.md
nexa_data/msms/rust_ext/src/: batch_processor.rs  hdf5_reader.rs  lib.rs  shard_writer.rs  validator.rs
nexa_distill/: README.md  __init__.py  collect_teacher.py  filter_pairs.py  pipeline.py  regenerate_bad.py  sample_gate.py  to_sft.py  ui_inspect.py
nexa_eval/: README.md  analyze.py  analyze_results.py  evaluate_distillation.py  generate.py  generate_responses.py  judge.py  judge_responses.py  prepare_prompts.py  toolproto.py
nexa_feedback/: feedback_loop.py  weakness_analysis.py
nexa_inference/: README.md  __init__.py  batch_processor.py  caching.py  cli.py  controller.py  core.py  embedding.py  ensemble.py  exporters.py  federated_search.py  feedback.py  graphql_api.py  middleware.py  monitoring.py  multi_tenancy.py  preprocessor.py  property_predictor.py  query_expansion.py  reranker.py  server.py  snapshot.py  spectral_server.py  storage.py  structure_decoder.py  vector_db.py
nexa_infra/: Boostrap.sh  README.md  __init__.py  bootstrap_astrodata.sh  cluster.yaml  cost_tracker.py  launch_job.py  provision.py  slurm.py  slurm_sweep_example.yaml  slurm_template.sh  sync_code.py  tailscale_bootstrap.sh  teardown.py  utils.py
nexa_tools/: README.md  __init__.py  papers.py  sandbox.py  server.py  units.py
nexa_train/: README.md  distill.py  launcher.py  train.py  utils.py
nexa_ui/: README.md  eval_dashboard.py  inspect_distillation.py  leaderboard.py  msms_dashboard.py  vllm_dashboard.py
rust/nexa_data_core/: Cargo.toml
rust/nexa_data_core/src/: batching.rs  config.rs  lib.rs  processing.rs  schema.rs  shuffle.rs  splitting.rs  stats.rs  transforms.rs
rust/nexa_data_quality/: Cargo.toml
rust/nexa_data_quality/src/: config.rs  dedup.rs  filter.rs  filters.rs  lib.rs  metrics.rs
rust/nexa_stats/: Cargo.toml
rust/nexa_stats/src/: distributions.rs  hist.rs  lib.rs  metrics.rs  tests.rs
rust/nexa_train_pack/: Cargo.toml
rust/nexa_train_pack/src/: lib.rs  packing.rs  sampling.rs
scripts/: __init__.py  analyze_runs.py  calculate_distillation_cost.py  cleanup.py  cli.py  convert_docs_to_mdx.py  create_dashboard_demo.py  create_docs_from_source.py  deploy.py  download_data.py  final_mdx_cleanup.py  fix_mdx.py  generate_forge_mdx.py  generate_forge_mdx_fixed.py  gpu_monitor.py  hyperparameter_search.py  launch_ddp.sh  launch_streamlit_eval.py  monitor_training.py  package_for_deployment.py  populate_test_data.py  preprocess_data.py  python.py  run_evaluation.py  run_teacher_collection.py  sample_quality_test.json  scan_repo.py  submit_slurm.py  sync_s3.py  test_hf_train.py  validate_dag.py
sdk/: README.md  demo.py  setup.py
tests/: README.md  __init__.py  cli.py  conftest.py  main.py  test_api.py  test_config.py  test_data_pipeline.py  test_deployment.py  test_golden_pipeline.py  test_idempotency.py  test_inference_features.py  test_infra.py  test_integration.py  test_integration_comprehensive.py  test_registry.py  test_resilience.py  test_rust_modules.py  test_sdk.py  test_simulation.py  test_trainer.py  test_v4_features.py
(+352 files in other folders)
