[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexa-compute"
version = "0.1.0"
description = "Scalable training platform for deep learning workloads"
authors = [{name = "Nexa Compute"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.1.0",
  "torchvision>=0.16.0",
  "torchaudio>=2.1.0",
  "numpy>=1.26",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "pydantic>=2.4",
  "typer>=0.9",
  "tqdm>=4.66",
  "mlflow>=2.8",
  "tensorboard>=2.14",
  "rich>=13.6",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pint>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.1.8",
  "mypy>=1.6",
]

[tool.setuptools]
package-dir = {"nexa_compute" = "src/nexa_compute"}

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["nexa_*", "nexa_compute"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
