[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexa-api"
version = "0.1.0"
description = "Nexa API - Remote AI Pipeline Service"
authors = [
  { name="Nexa Team", email="team@nexa.run" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "pandas",
    "pyyaml",
]

[project.urls]
"Homepage" = "https://github.com/nexa/nexa-compute"
"Bug Tracker" = "https://github.com/nexa/nexa-compute/issues"

[tool.setuptools.packages.find]
where = ["src"]
