[package]
name = "nexa_data_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "nexa_data_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
arrow = { version = "52.0", features = ["pyarrow"] }
parquet = "52.0"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.5"
