[package]
name = "msms_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "msms_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }
numpy = "0.22"
rayon = "1.10"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
tikv-jemallocator = "0.5"

[build-dependencies]
pyo3-build-config = { version = "0.22", features = ["resolve-config"] }
